# BeaconUtilities

./: .gitignore  MANIFEST.in  README.md  mkdocs-user.yml  mkdocs.installer.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/workflows/: ci.yml
config/: config.example.ini  config.example.json
docs/: architecture.md  development.md  index.md  operations.md  overview.md
docs/Appendices/: 1_DevelopmentNotes.md  2_DevelopmentProgress.md  3_BeaconInteraction.md  4_ProcessFlow.md  5_ProjectReview.md  6_ConfigurationReference.md
docs/user_docs/: installation.md  user-guide.md
downloads/: groups.xlsx  members.xlsx
installer/: INSTALL.txt  install.ps1  install.sh  run.ps1  run.sh
outputs/: 202604281322_Petersfield u3abackup.xlsx  Beacon_Full_Backup.xlsx  Member_Names.xlsx
src/beaconutilities/: __init__.py  beacon_scraper.py  cli.py  config.py  database.py  excel_parser.py  logging_utils.py  mapping.py  models.py  preflight.py  state.py  sync.py  wordpress.py
state/: beacon_data.db
tests/: conftest.py  test_beacon_scraper.py  test_cli.py  test_config.py  test_database.py  test_excel_parser.py  test_mapping.py  test_models.py  test_preflight.py  test_sync.py  test_wordpress.py
tests/fixtures/: groups.xlsx  members.xlsx
