[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-utilities"
version = "0.0.6"
description = "Programmatic access to Beacon U3A CRM via Playwright automation for WordPress website integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Petersfield U3A" }
]
dependencies = [
  "requests>=2.32.0",
  "playwright>=1.40.0",
  "openpyxl>=3.1.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "invoke>=2.2.0",
  "mkdocs>=1.6.0,<2.0.0",
  "mkdocs-material>=9.5.30",
  "mkdocstrings[python]>=0.30.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "requests-mock>=1.12.0",
  "mkdocs-autorefs>=1.0.0"
]

[project.scripts]
beacon-utilities = "beaconutilities.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/beaconutilities --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/beaconutilities"]
omit = ["*/tests/*"]
